# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_loader/: __init__.py  all_in_one.py  app_logger.py  cli.py  download_html.py  download_sources.py  downloader.py  downloader2.py  files_loader.py  html_downloader.py  html_loader.py  img_downloader.py  img_loader.py  in_out.py  logger_mess.py  naming.py  page_loader.py  prepare_data.py  processes.py  renamer.py  resources.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: conftest.py  test_page_loader.py
tests/fixtures/: before.html  html_after.html  html_before.html  page-loader-hexlet-repl-co.html  result.html  script.js  style.css  test_html_after.html  test_html_before.html  text_html
tests/fixtures/expected/: page-loader-hexlet-repl-co.html
tests/fixtures/expected/page-loader-hexlet-repl-co_files/: page-loader-hexlet-repl-co-courses.html
tests/test_downloaders/: test_download_html.py  test_download_sources.py  test_downloader.py  test_processes.py
